--- a/Data and information visualization.ipynb
+++ b/Data and information visualization.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e553f82a",
+   "metadata": {},
+   "source": [
+    "# Data and Information Visualization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "04dfcd23",
@@ -39,6 +47,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9bea6f39",
+   "metadata": {},
+   "source": [
+    "## Coloured Bar Graph using Matplotlib in Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2d8e608",
+   "metadata": {},
+   "source": [
+    "### Coloured Bar Graph"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "14d71d7a-e3c2-4745-8a64-2ddc9ca91bfe",
@@ -71,6 +95,14 @@
     "\n",
     "# Display the chart\n",
     "pyplot.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74486fad",
+   "metadata": {},
+   "source": [
+    "### Stacked Bar Graph"
    ]
   },
   {
@@ -119,7 +151,7 @@
    "id": "0d02fa79",
    "metadata": {},
    "source": [
-    "## Horizontal Bar Graph using Matplotlib in Python"
+    "### Horizontal Bar Graph"
    ]
   },
   {
@@ -156,6 +188,22 @@
     "# Display the chart\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1642a8b7",
+   "metadata": {},
+   "source": [
+    "### Grouped Bar Graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb07be0b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
