--- a/Data and information visualization.ipynb
+++ b/Data and information visualization.ipynb
@@ -51,7 +51,9 @@
    "id": "9bea6f39",
    "metadata": {},
    "source": [
-    "## Coloured Bar Graph using Matplotlib in Python"
+    "## Coloured Bar Graph using Matplotlib in Python\n",
+    "\n",
+    "First, let's implement some basic graph code for understanding."
    ]
   },
   {
@@ -199,8 +201,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cb07be0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"New\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d761c1e2",
    "metadata": {},
    "outputs": [],
    "source": []
