--- a/Data and information visualization.ipynb
+++ b/Data and information visualization.ipynb
@@ -2275,6 +2275,56 @@
     "figure.update_traces(fill='toself')\n",
     "figure.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8eeaf41a",
+   "metadata": {},
+   "source": [
+    "## Password Authentication using Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d53305fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your Username: clcoding\n",
+      "❌ Incorrect password. Attempt 1 of 3.\n",
+      "❌ Incorrect password. Attempt 2 of 3.\n",
+      "❌ Incorrect password. Attempt 3 of 3.\n",
+      "🚫 Too many failed attempts. Access Denied.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import getpass\n",
+    "\n",
+    "database = {'clcoding': '976729', 'pythonclcoding': '2502'}\n",
+    "\n",
+    "username = input('Enter Your Username: ')\n",
+    "print('Your Username:', username)\n",
+    "\n",
+    "# Check for valid username first\n",
+    "if username not in database:\n",
+    "    print('❌ Username not found. Access Denied.')\n",
+    "else:\n",
+    "    # Allow up to 3 attempts for password\n",
+    "    for attempt in range(3):\n",
+    "        password = getpass.getpass('Enter Your Password: ')\n",
+    "        if password == database[username]:\n",
+    "            print('✅ Verified')\n",
+    "            break\n",
+    "        else:\n",
+    "            print(f'❌ Incorrect password. Attempt {attempt + 1} of 3.')\n",
+    "    else:\n",
+    "        print('🚫 Too many failed attempts. Access Denied.')\n"
+   ]
   }
  ],
  "metadata": {
