--- a/Data and information visualization.ipynb
+++ b/Data and information visualization.ipynb
@@ -2286,7 +2286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "d53305fd",
    "metadata": {},
    "outputs": [
@@ -2298,7 +2298,8 @@
       "❌ Incorrect password. Attempt 1 of 3.\n",
       "❌ Incorrect password. Attempt 2 of 3.\n",
       "❌ Incorrect password. Attempt 3 of 3.\n",
-      "🚫 Too many failed attempts. Access Denied.\n"
+      "🚫 Too many failed attempts. Access Denied.\n",
+      "Thanks for using our system.\n"
      ]
     }
    ],
@@ -2323,7 +2324,19 @@
     "        else:\n",
     "            print(f'❌ Incorrect password. Attempt {attempt + 1} of 3.')\n",
     "    else:\n",
-    "        print('🚫 Too many failed attempts. Access Denied.')\n"
+    "        print('🚫 Too many failed attempts. Access Denied.')\n",
+    "\n",
+    "# Don't use this. Become a non-break loop\n",
+    "# password = getpass.getpass('Enter Your Password: ')\n",
+    "# print('Your Password: ', password)\n",
+    "# for i in database.keys():\n",
+    "#     if username == i:\n",
+    "#         while password !=database.get(i):\n",
+    "#             password = getpass.getpass('Enter Your Password Again: ')\n",
+    "#         break\n",
+    "# print(\"Verified\")\n",
+    "\n",
+    "print('Thanks for using our system.')"
    ]
   }
  ],
